The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

### Changed

### Deprecated

### Removed

### Fixed

### Security

## [22.06.2] 2022-06-09

### Changed

* IS_BACKUPUPTODATE: add --max-depth=1 to limit the number of evaluated files

## [22.06.1] 2022-06-06

### Changed

* IS_BACKUPUPTODATE: look for all files (with find) instead of simple "file globbing" on first level.
* IS_DEBIANSECURITY: support source list options
* IS_SSHPERMITROOTNO: analyze real configuration, instead of parsing the file


## [22.06] 2022-06-03

### Added

* IS_AUTOIF: Ignore WireGuard interfaces
* IS_NETWORKING_SERVICE: check if networking service is enabled

### Changed

* IS_DEBIANSECURITY: Fix Debian security repo for Bullseye, cf https://www.debian.org/releases/stable/errata

## [22.05] 2022-05-12

### Changed

* IS_EVOBACKUP_EXCLUDE_MOUNT: exclude scripts without Rsync command

## [22.04.1] 2022-04-25

### Changed

* fix various shellcheck violations

### Fixed

* IS_EVOBACKUP_EXCLUDE_MOUNT: fix one-file-system restriction

## [22.04] 2022-04-25

### Changed

* IS_EVOBACKUP_EXCLUDE_MOUNT : skip if --one-file-system is used

### Fixed

* check_versions: "IS_CHECK_VERSIONS" was checked but "IS_VERSIONS_CHECK" was echoed, now "IS_CHECK_VERSIONS" everywhere

### Security

* check_debiansecurity: Consider both https://deb\.debian\.org/debian-security/ and https://security\.debian\.org/debian-security/ as valid since both are documented as such.

## [22.03.1] 2022-03-22

### Changed

* check_autoif : Ignore lxcbr interfaces, new since bullseye

## [22.03] 2022-03-15

### Added

* check_mysqlmunin : Complain if munin plugin mysql_commands returns an error
* check_versions : track minifirewall version

## [21.10.4] 2021-10-25

### Changed

* IS_CHECK_VERSIONS disabled in cron mode

## [21.10.3] 2021-10-22

### Added
